# tempo-shell-scripts

./: CHANGELOG.md  README.md  pyproject.toml
batch/: add_mod.bat  build.bat  clean_build.bat  clean_cooked.bat  clean_full.bat  clean_game.bat  close_engine.bat  close_game.bat  cook.bat  disable_mod.bat  dump_aes_keys.bat  dump_build_configuration.bat  dump_engine_version.bat  dump_jmap.bat  dump_script_objects.bat  enable_mod.bat  full_run_all.bat  generate_game_file_list_json.bat  generate_mod_releases_all.bat  generate_mods_all.bat  kismet_analyze_game.bat  open_latest_log.bat  package.bat  refresh_deps.bat  remove_mod.bat  resync_dir_with_repo.bat  run_engine.bat  run_game.bat  setup.bat  test.py  test_mods_all.bat
sh/: TUI.sh  add_mod.sh  build.sh  clean_build.sh  clean_cooked.sh  clean_full.sh  clean_game.sh  close_engine.sh  close_game.sh  commitizen_bump_version.sh  commitizen_commit.sh  cook.sh  disable_mod.sh  dump_aes_keys.sh  dump_build_configuration.sh  dump_engine_version.sh  dump_jmap.sh  dump_script_objects.sh  enable_mod.sh  full_run_all.sh  generate_game_file_list_json.sh  generate_mod_releases_all.sh  generate_mods_all.sh  kismet_analyze_game.sh  mkdocs_build.sh  mkdocs_serve.sh  open_latest_log.sh  package.sh  refresh_deps.sh  remove_mod.sh  resync_dir_with_repo.sh  run_engine.sh  run_game.sh  setup.sh  test_mods_all.sh
src/tempo_shell_scripts/: __init__.py
