[project]
name = "tempo-shell-scripts"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mythical-Github", email = "67753356+Mythical-Github@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
tempo-shell-scripts = "tempo_shell_scripts:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "commitizen>=4.16.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
